--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -15,6 +15,6 @@ jobs:
       - name: Checkout Source
         uses: actions/checkout@v2
       - name: Run Gosec Security Scanner
-        uses: securego/gosec@master
+        uses: informalsystems/gosec@master
         with:
           args: ./...
