--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,5 +1,6 @@
 name: Semgrep
 on:
+  # Scan changed files in PRs, block on new issues only (existing issues ignored)
   pull_request: {}
   push:
     branches:
@@ -18,3 +19,15 @@ jobs:
       - uses: returntocorp/semgrep-action@v1
         with:
           publishToken: ${{ secrets.SEMGREP_APP_TOKEN }}
+          config: >- # more at semgrep.dev/explore
+            p/security-audit
+            p/secrets
+            p/golang
+            p/trailofbits
+            p/semgrep-go-correctness
+      # Upload findings to GitHub Advanced Security Dashboard [step 2/2]
+      - name: Upload SARIF file for GitHub Advanced Security Dashboard
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: semgrep.sarif
+        if: always()
