--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -16,18 +16,26 @@ jobs:
     if: (github.actor != 'dependabot[bot]')
     steps:
       - uses: actions/checkout@v2
+      - name: Get Diff
+        uses: technote-space/get-diff-action@v6.0.1
+        with:
+          PATTERNS: |
+            **/*.go
+            **/*.js
+            **/*.ts
+            **/*.sol
+            go.mod
+            go.sum
       - uses: returntocorp/semgrep-action@v1
         with:
           publishToken: ${{ secrets.SEMGREP_APP_TOKEN }}
-          config: >- # more at semgrep.dev/explore
-            p/security-audit
-            p/secrets
-            p/golang
-            p/trailofbits
-            p/semgrep-go-correctness
+           # Upload findings to GitHub Advanced Security Dashboard [step 1/2]
+          # See also the next step.
+          generateSarif: "1"
+          if: "env.GIT_DIFF_FILTERED != ''"
       # Upload findings to GitHub Advanced Security Dashboard [step 2/2]
       - name: Upload SARIF file for GitHub Advanced Security Dashboard
         uses: github/codeql-action/upload-sarif@v1
         with:
           sarif_file: semgrep.sarif
-        if: always()
+        if: "env.GIT_DIFF_FILTERED != ''"
