--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-# CODEOWNERS: https://help.github.com/ar*.go docs@example.comticles/about-codeowners/
+# CODEOWNERS: https://help.github.com/articles/about-codeowners/
 
 # Primary (global) repo maintainers
 *       @fedekunze @khoslaventures @jolube 
