--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
       "title": "Evmos Chain - gRPC Gateway docs",
-      "description": "A REST interface for state queries",
+      "description": "A REST interface for state queries and transactions",
       "version": "1.0.0"
     },
     "apis": [
