--- a/config.yml
+++ b/config.yml
@@ -1,39 +1,39 @@
 accounts:
   - name: alice
-    coins: ["100000000uatom", "100000000000000000000aevmos"]
+    coins: ["100000000uatom", "100000000000000000000abera"]
   - name: bob
-    coins: ["5000000000000aevmos"]
+    coins: ["5000000000000abera"]
 validator:
   name: alice
-  staked: "100000000000000000000aevmos"
+  staked: "100000000000000000000abera"
 faucet:
   name: bob 
-  coins: ["10aevmos"]
+  coins: ["10abera"]
 build:
-  binary: "evmosd"
+  binary: "berachaind"
 init:
-  home: "$HOME/.evmosd"
+  home: "$HOME/.berachaind"
   app:
     evm-rpc:
       address: "0.0.0.0:8545"     # change the JSON-RPC address and port
       ws-address: "0.0.0.0:8546"  # change the JSON-RPC websocket address and port
 genesis:
-  chain_id: "evmosd_9000-1"
+  chain_id: "berachaind_9000-1"
   app_state:
     staking:
       params:
-        bond_denom: "aevmos"
+        bond_denom: "abera"
     mint:
       params:
-        mint_denom: "aevmos"
+        mint_denom: "abera"
     crisis:
       constant_fee:
-        denom: "aevmos"
+        denom: "abera"
     gov:
       deposit_params:
         min_deposit:
           - amount: "10000000"
-            denom: "aevmos"
+            denom: "abera"
     evm:
       params:
-        evm_denom: "aevmos"
+        evm_denom: "abera"
