fix: IBC withdraw middleware

--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -45,6 +45,14 @@
         "url": "./tmp-swagger-gen/evmos/vesting/v1/query.swagger.json"
       },
       {
+        "url": "./tmp-swagger-gen/evmos/withdraw/v1/query.swagger.json",
+        "operationIds": {
+          "rename": {
+            "Params": "WithdrawParams"
+          }
+        }
+      },
+      {
         "url": "./tmp-swagger-gen/ethermint/evm/v1/query.swagger.json",
         "operationIds": {
           "rename": {
