--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -37,15 +37,8 @@
         "url": "./tmp-swagger-gen/evmos/inflation/v1/query.swagger.json",
         "operationIds": {
           "rename": {
+            "Params": "InflationParams",
             "TotalSupply": "InflationTotalSupply"
-          }
-        }
-      },
-      {
-        "url": "./tmp-swagger-gen/evmos/inflation/v1/query.swagger.json",
-        "operationIds": {
-          "rename": {
-            "Params": "InflationParams"
           }
         }
       },
