--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -59,7 +59,7 @@ jobs:
           PATTERNS: |
             **/**.sol
       - name: "Run solhint"
-        uses: contractshark/inject-solhint-ci@4.0.0
+        uses: contractshark/inject-solhint-ci@1.0.0+0
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
