--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -26,7 +26,7 @@ jobs:
       continue-on-error: true
       id: slither
       with:
-        sarif: results.sarif
+        sarif: slither.sarif
         target: contracts/
       if: "env.GIT_DIFF_FILTERED != ''"
     - name: Upload SARIF file
