--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -14,23 +14,28 @@ jobs:
       contents: read
       security-events: write
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-    - name: Get Diff
-      uses: technote-space/get-diff-action@v6.0.1
-      with:
-        PATTERNS: |
-          **/*.sol
-    - name: Run Slither Action
-      uses: crytic/slither-action@v0.1.0
-      continue-on-error: true
-      id: slither
-      with:
-        sarif: slither.sarif
-        target: contracts/
-      if: "env.GIT_DIFF_FILTERED != ''"
-    - name: Upload SARIF file
-      uses: github/codeql-action/upload-sarif@v1
-      with:
-        sarif_file: ${{ steps.slither.outputs.sarif }}
-      if: "env.GIT_DIFF_FILTERED != ''"
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+      - name: Get Diff
+        uses: technote-space/get-diff-action@v6.0.1
+        with:
+          PATTERNS: |
+            **/*.sol
+      - name: Install tools
+        run: make contract-tools
+      - name: Run Slither Action
+        uses: crytic/slither-action@v0.1.0
+        continue-on-error: true
+        id: slither
+        with:
+          sarif: slither.sarif
+          target: contracts/
+        if: "env.GIT_DIFF"
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: ${{ steps.slither.outputs.sarif }}
+        if: "env.GIT_DIFF"
