--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -33,9 +33,9 @@ jobs:
         with:
           sarif: slither.sarif
           target: contracts/
-        if: "env.GIT_DIFF"
+        # if: "env.GIT_DIFF"
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v1
         with:
           sarif_file: ${{ steps.slither.outputs.sarif }}
-        if: "env.GIT_DIFF"
+        # if: "env.GIT_DIFF"
