--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install tools
         run: make contract-tools
       - name: Node dependencies Install
-        run: cd contracts && npm i
+        run: cd contracts && yarn
       - name: Run Slither Action
         uses: crytic/slither-action@v0.1.0
         continue-on-error: true
