--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -24,10 +24,10 @@ jobs:
         with:
           PATTERNS: |
             **/*.sol
-      # - name: Install tools
-      #   run: make contract-tools
+      - name: Install tools
+        run: make contract-tools
       - name: Node dependencies Install
-        run: cd contracts && yarn
+        run: cd contracts && npm i
       - name: Run Slither Action
         uses: crytic/slither-action@v0.1.0
         continue-on-error: true
@@ -36,6 +36,7 @@ jobs:
           slither-config: "slither.config.json"
           sarif: slither.sarif
           target: contracts/
+          slither-args: "--solc-remaps @openzeppelin=node_modules/@openzeppelin"
         # if: "env.GIT_DIFF"
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v1
