--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -28,11 +28,12 @@ jobs:
         run: make contract-tools
       - name: Node dependencies Install
         run: cd contracts && npm i
-      - run: ls contracts/node_modules
       - name: Run Slither Action
         uses: crytic/slither-action@v0.1.0
         continue-on-error: true
         id: slither
+        env:
+          INPUT_SLITHER-ARGS: "--solc-remaps @openzeppelin=node_modules/@openzeppelin"
         with:
           sarif: slither.sarif
           target: contracts/
