--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -24,20 +24,19 @@ jobs:
         with:
           PATTERNS: |
             **/*.sol
-      - name: Install tools
-        run: make contract-tools
+      # - name: Install tools
+      #   run: make contract-tools
       - name: Node dependencies Install
-        run: cd contracts && npm i
+        run: |
+          cd contracts && npm i
+          cp -r node_modules/@openzeppelin .
       - name: Run Slither Action
         uses: crytic/slither-action@v0.1.0
         continue-on-error: true
         id: slither
-        env:
-          INPUT_SLITHER-ARGS: "--solc-remaps @openzeppelin=node_modules/@openzeppelin"
         with:
           sarif: slither.sarif
           target: contracts/
-          slither-args: --solc-remaps @openzeppelin=node_modules/@openzeppelin
         # if: "env.GIT_DIFF"
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v1
