--- a/.golangci.yml
+++ b/.golangci.yml
@@ -23,6 +23,7 @@ linters:
     # - lll TODO: enable
     - misspell
     # - maligned
+    - cyclop
     - nakedret
     - prealloc
     - exportloopref
@@ -56,6 +57,9 @@ issues:
         - lll
       source: "https://"
   max-same-issues: 50
+skip-dirs:
+    - docs
+    - clients
 
 linters-settings:
   dogsled:
@@ -82,3 +86,321 @@ linters-settings:
       - https://github.com/dgrijalva/jwt-go:                      # Blocked module with version constraint
           version: ">= 4.0.0-preview1"                           # Version constraint, see https://github.com/Masterminds/semver#basic-comparisons
           reason: "CVE-2020-26160"  # Reason why the version constraint exists. (Optional)
+  cyclop:
+    # The maximal code complexity to report.
+    max-complexity: 15
+    # Should ignore tests.
+    skip-tests: true
+  revive:
+    enable-all-rules: true
+    rules:
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#add-constant
+    - name: add-constant
+      severity: warning
+      disabled: false
+      arguments:
+        - maxLitCount: "3"
+          allowStrs: '""'
+          allowInts: "0,1,2"
+          allowFloats: "0.0,0.,1.0,1.,2.0,2."
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#atomic
+    - name: argument-limit
+      severity: warning
+      disabled: false
+      arguments: [4]
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#atomic
+    - name: atomic
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#banned-characters
+    - name: banned-characters
+      severity: warning
+      disabled: true
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#bare-return
+    - name: bare-return
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#blank-imports
+    - name: blank-imports
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#bool-literal-in-expr
+    - name: bool-literal-in-expr
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#call-to-gc
+    - name: call-to-gc
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#cognitive-complexity
+    - name: cognitive-complexity
+      severity: warning
+      disabled: false
+      arguments: [7]
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#confusing-naming
+    - name: confusing-naming
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#confusing-results
+    - name: confusing-results
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#constant-logical-expr
+    - name: constant-logical-expr
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#context-as-argument
+    - name: context-as-argument
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#context-keys-type
+    - name: context-keys-type
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#cyclomatic
+    - name: cyclomatic
+      severity: warning
+      disabled: false
+      arguments: [15]
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#deep-exit
+    - name: deep-exit
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#defer
+    - name: defer
+      severity: warning
+      disabled: false
+      arguments:
+        - ["call-chain", "loop"]
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#dot-imports
+    - name: dot-imports
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#duplicated-imports
+    - name: duplicated-imports
+      severity: error
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#early-return
+    - name: early-return
+      severity: error
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#empty-block
+    - name: empty-block
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#empty-lines
+    - name: empty-lines
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#error-naming
+    - name: error-naming
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#error-return
+    - name: error-return
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#error-strings
+    - name: error-strings
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#errorf
+    - name: errorf
+      severity: error
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#exported
+    - name: exported
+      severity: warning
+      disabled: false
+      arguments:
+        - "checkPrivateReceivers"
+        - "sayRepetitiveInsteadOfStutters"
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#file-header
+    - name: file-header
+      severity: warning
+      disabled: true
+      arguments:
+        - This is the text that must appear at the top of source files.
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#flag-parameter
+    - name: flag-parameter
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#function-result-limit
+    - name: function-result-limit
+      severity: warning
+      disabled: true
+      arguments: [3]
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#function-length
+    - name: function-length
+      severity: warning
+      disabled: true
+      arguments: [10, 0]
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#get-return
+    - name: get-return
+      severity: error
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#identical-branches
+    - name: identical-branches
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#if-return
+    - name: if-return
+      severity: error
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#increment-decrement
+    - name: increment-decrement
+      severity: error
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#indent-error-flow
+    - name: indent-error-flow
+      severity: error
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#imports-blacklist
+    - name: imports-blacklist
+      severity: warning
+      disabled: true
+      arguments:
+        - "crypto/md5"
+        - "crypto/sha1"
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#import-shadowing
+    - name: import-shadowing
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#line-length-limit
+    - name: line-length-limit
+      severity: warning
+      disabled: false
+      arguments: [120]
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#max-public-structs
+    - name: max-public-structs
+      severity: warning
+      disabled: true
+      arguments: [3]
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#modifies-parameter
+    - name: modifies-parameter
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#modifies-value-receiver
+    - name: modifies-value-receiver
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#nested-structs
+    - name: nested-structs
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#optimize-operands-order
+    - name: optimize-operands-order
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#package-comments
+    - name: package-comments
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#range
+    - name: range
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#range-val-in-closure
+    - name: range-val-in-closure
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#range-val-address
+    - name: range-val-address
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#receiver-naming
+    - name: receiver-naming
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#redefines-builtin-id
+    - name: redefines-builtin-id
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#string-of-int
+    - name: string-of-int
+      severity: error
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#string-format
+    - name: string-format
+      severity: error
+      disabled: false
+      arguments:
+        - - 'core.WriteError[1].Message'
+          - '/^([^A-Z]|$)/'
+          - must not start with a capital letter
+        - - 'fmt.Errorf[0]'
+          - '/(^|[^\.!?])$/'
+          - must not end in punctuation
+        - - panic
+          - '/^[^\n]*$/'
+          - must not contain line breaks
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#struct-tag
+    - name: struct-tag
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#superfluous-else
+    - name: superfluous-else
+      severity: error
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#time-equal
+    - name: time-equal
+      severity: error
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#time-naming
+    - name: time-naming
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#var-naming
+    - name: var-naming
+      severity: warning
+      disabled: false
+      arguments:
+        - ["ID"] # AllowList
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#var-declaration
+    - name: var-declaration
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#unconditional-recursion
+    - name: unconditional-recursion
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#unexported-naming
+    - name: unexported-naming
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#unexported-return
+    - name: unexported-return
+      severity: error
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#unhandled-error
+    - name: unhandled-error
+      severity: error
+      disabled: false
+      arguments:
+        - "fmt.Printf"
+        - "sdkerrors.Wrapf"
+        - "sdkerrors.Wrap"
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#unnecessary-stmt
+    - name: unnecessary-stmt
+      severity: warning
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#unreachable-code
+    - name: unreachable-code
+      severity: error
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#unused-parameter
+    - name: unused-parameter
+      severity: error
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#unused-receiver
+    - name: unused-receiver
+      severity: error
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#useless-break
+    - name: useless-break
+      severity: error
+      disabled: false
+    # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#waitgroup-by-value
+    - name: waitgroup-by-value
+      severity: warning
+      disabled: false
