--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,7 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: 1.17
+          check-latest: true
       - name: Display Go Version
         run: go version
       - name: Install tparse
@@ -37,6 +38,7 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: 1.17
+          check-latest: true
       - uses: actions/checkout@v3
       - uses: technote-space/get-diff-action@v6.0.1
         with:
