--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -43,7 +43,7 @@ jobs:
       - uses: nosborn/github-action-markdown-cli@v3.0.1
         with:
           files: .
-          config_file: .markdownlint.yaml
+          config_file: .markdownlint.yml
           ignore_path: .markdownlintignore
         # Check only if there are differences in the source code
         if: env.GIT_DIFF
