--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,8 +2,6 @@
 # Please adjust to your needs (see https://www.gitpod.io/docs/config-gitpod-file)
 # and commit this file to your remote git repository to share the goodness with others.
 
-tasks:
-  - init: npm install && go get && go build ./... && go test ./... && make
-    command: go run
+image: ghcr.io/faddat/cosmos
 
 
