--- a/.golangci.yml
+++ b/.golangci.yml
@@ -92,7 +92,7 @@ linters-settings:
     # Should ignore tests.
     skip-tests: true
   revive:
-    enable-all-rules: true
+    enable-all-rules: false
     rules:
     # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#add-constant
     - name: add-constant
