Linter severity settings test

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -4,6 +4,10 @@ run:
   # timeout: 5m
 severity:
   default-severity: info
+  rules:
+    - linters:
+        - dupl
+      severity: info
 
 linters:
   enable:
