--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -13,29 +13,17 @@ jobs:
   semgrep:
     name: Scan
     runs-on: ubuntu-latest
+    container:
+       image: returntocorp/semgrep
     if: (github.actor != 'dependabot[bot]')
     steps:
       - uses: actions/checkout@v3
-      - name: Get Diff
-        uses: technote-space/get-diff-action@v6.0.1
-        with:
-          PATTERNS: |
-            **/*.go
-            **/*.js
-            **/*.ts
-            **/*.sol
-            go.mod
-            go.sum
-      - uses: returntocorp/semgrep-action@v1
-        with:
-          publishToken: ${{ secrets.SEMGREP_APP_TOKEN }}
-           # Upload findings to GitHub Advanced Security Dashboard [step 1/2]
-          # See also the next step.
-          generateSarif: "1"
-        if: "env.GIT_DIFF_FILTERED != ''"
+      - run: semgrep scan --sarif --output=semgrep.sarif --config=policy
+        env:
+          SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
       # Upload findings to GitHub Advanced Security Dashboard [step 2/2]
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: semgrep.sarif
-        if: "env.GIT_DIFF_FILTERED != ''"
+        if: always()
