revert small change

--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.2"
   },
-  "devDependencies": {
-    "solhint-ci": "^4.0.2"
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
