--- a/.github/workflows/solhint.yml
+++ b/.github/workflows/solhint.yml
@@ -14,4 +14,5 @@ jobs:
       - name: solhint
         uses: contractshark/inject-solhint-ci@1.0.0+0
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           solhint_input: 'contracts/**/*.sol'
