--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -9,5 +9,6 @@ tasks:
     command: 
       go install golang.org/x/tools/cmd/goimports@latest
       go install mvdan.cc/gofumpt@latest
+      pacman -Syyu clang
       sudo make tools
 
