update scripts and .gitpod.yml

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,7 +6,7 @@ image: ghcr.io/notional-labs/cosmos
 
 tasks:
   - name: install tools
-    command: 
+    command: |
       go install golang.org/x/tools/cmd/goimports@latest
       go install mvdan.cc/gofumpt@latest
       pacman -Syyu clang
