Add codecov token to fix test pipeline

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,4 +38,6 @@ jobs:
         with:
           file: ./coverage.txt
           fail_ci_if_error: true
+          token: "${{ secrets.CODECOV_TOKEN }}"
         if: env.GIT_DIFF
+
