--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -24,7 +24,7 @@ jobs:
         uses: informalsystems/gosec@master
         with:
           # we let the report trigger content trigger a failure using the GitHub Security features.
-          args: '-no-fail -fmt sarif -out results.sarif ./...'
+          args: '-no-fail -quiet -severity medium -fmt sarif -out results.sarif ./...'
         if: "env.GIT_DIFF_FILTERED != ''"
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
