[checks] specify repo branch name on markdown-link-check config

--- a/.github/workflows/markdown-links.yml
+++ b/.github/workflows/markdown-links.yml
@@ -19,3 +19,4 @@ jobs:
           folder-path: "docs"
           check-modified-files-only: "yes"
           use-quiet-mode: "yes"
+          base-branch: "main"
