[checks] add custom config file for markdown-links check

--- a/.github/workflows/markdown-links.yml
+++ b/.github/workflows/markdown-links.yml
@@ -20,3 +20,4 @@ jobs:
           check-modified-files-only: "yes"
           use-quiet-mode: "yes"
           base-branch: "main"
+          config-file: "mlc_config.json"
